--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
   <meta http-equiv="refresh" content="0; URL= ./doc/html/index.html">
 </head>
 <body>
-  Automatic redirection to "svg_plot/doc/index.html" failed!
+  Automatic redirection to "svg_plot/doc/html/index.html" failed!
 </body>
 </html>
